# EoplLangs

./: LICENSE  eopl-langs.cabal  learning-eopl.cabal
app/: Main.hs
src/: Repl.hs
src/CallByName/: Data.hs  Evaluator.hs  Parser.hs
src/CallByNeed/: Data.hs  Evaluator.hs  Parser.hs
src/CallByReference/: Data.hs  Evaluator.hs  Parser.hs
src/CheckedLang/: Data.hs  Evaluator.hs  Parser.hs  TypeChecker.hs
src/ContinuationPassing/: Data.hs  Evaluator.hs  Parser.hs
src/ExceptionLang/: Data.hs  Evaluator.hs  Parser.hs
src/ExplicitRefs/: Data.hs  Evaluator.hs  Parser.hs
src/ImplicitRefs/: Data.hs  Evaluator.hs  Parser.hs
src/ImplicitRefsCont/: Data.hs  Evaluator.hs  Parser.hs
src/InferredLang/: Data.hs  Evaluator.hs  Parser.hs  TypeChecker.hs
src/Lang/: Evaluator.hs  Parser.hs
src/Lang/Data/: DenotedValue.hs  Environment.hs  ExpressedValue.hs  Expression.hs  Program.hs
src/Let/: Evaluator.hs  Parser.hs
src/Let/Data/: DenotedValue.hs  Environment.hs  ExpressedValue.hs  Expression.hs  Program.hs
src/LetLang/: Data.hs  Evaluator.hs  Parser.hs
src/LetLang/Data/: DenotedValue.hs  Environment.hs  ExpressedValue.hs  Expression.hs  Program.hs
src/LetRecLang/: Data.hs  Evaluator.hs  Parser.hs
src/MutablePairs/: Data.hs  Evaluator.hs  Parser.hs
src/NamelessIntp/: Data.hs  Evaluator.hs  Parser.hs  Translator.hs
src/ProcLang/: Data.hs  Evaluator.hs  Parser.hs
src/SimpleModule/: Data.hs  Evaluator.hs  Parser.hs  TypeChecker.hs
src/ThreadsLang/: Data.hs  Evaluator.hs  Parser.hs
test/: EvaluatorSuite.hs  ParserSuite.hs  Spec.hs
test/CallByName/: EvaluatorSuite.hs  ParserSuite.hs  Suites.hs
test/CallByNeed/: EvaluatorSuite.hs  ParserSuite.hs  Suites.hs
test/CallByReference/: EvaluatorSuite.hs  ParserSuite.hs  Suites.hs
test/CheckedLang/: EvaluatorSuite.hs  ParserSuite.hs  Suites.hs  TypeCheckerSuite.hs
test/ContinuationPassing/: EvaluatorSuite.hs  ParserSuite.hs  Suites.hs
test/ExceptionLang/: EvaluatorSuite.hs  ParserSuite.hs  Suites.hs
test/ExplicitRefs/: EvaluatorSuite.hs  ParserSuite.hs  Suites.hs
test/ImplicitRefs/: EvaluatorSuite.hs  ParserSuite.hs  Suites.hs
test/ImplicitRefsCont/: EvaluatorSuite.hs  ParserSuite.hs  Suites.hs
test/InferredLang/: EvaluatorSuite.hs  ParserSuite.hs  Suites.hs  TypeCheckerSuite.hs
test/Let/: EvaluatorSuite.hs  ParserSuite.hs  Suites.hs
test/LetLang/: EvaluatorSuite.hs  ParserSuite.hs  Suites.hs
test/LetRecLang/: EvaluatorSuite.hs  ParserSuite.hs  Suites.hs
test/MutablePairs/: EvaluatorSuite.hs  ParserSuite.hs  Suites.hs
test/NamelessIntp/: EvaluatorSuite.hs  ParserSuite.hs  Suites.hs
test/ProcLang/: EvaluatorSuite.hs  ParserSuite.hs  Suites.hs
test/SimpleModule/: EvaluatorSuite.hs  ParserSuite.hs  Suites.hs  TypeCheckerSuite.hs
test/ThreadsLang/: EvaluatorSuite.hs  ParserSuite.hs  Suites.hs
