name:                eopl-langs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/li-zhirui/EOPL-Langs-in-Haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Li Zhirui
maintainer:          labman004@outlook.com
copyright:           2016 Li Zhirui
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
                       LetLang.Data
                     , LetLang.Parser
                     , LetLang.Evaluator
                     
                     , ProcLang.Data
                     , ProcLang.Evaluator
                     , ProcLang.Parser
                     
                     , LetRecLang.Data
                     , LetRecLang.Evaluator
                     , LetRecLang.Parser
                     
                     , NamelessIntp.Data
                     , NamelessIntp.Evaluator
                     , NamelessIntp.Parser
                     , NamelessIntp.Translator
                     
                     , ExplicitRefs.Data
                     , ExplicitRefs.Evaluator
                     , ExplicitRefs.Parser
                     
                     , ImplicitRefs.Data
                     , ImplicitRefs.Evaluator
                     , ImplicitRefs.Parser
                     
                     , MutablePairs.Data
                     , MutablePairs.Evaluator
                     , MutablePairs.Parser
                     
                     , CallByReference.Data
                     , CallByReference.Evaluator
                     , CallByReference.Parser
                     
                     , CallByName.Data
                     , CallByName.Evaluator
                     , CallByName.Parser
                     
                     , CallByNeed.Data
                     , CallByNeed.Evaluator
                     , CallByNeed.Parser
                     
                     , ContinuationPassing.Data
                     , ContinuationPassing.Evaluator
                     , ContinuationPassing.Parser
                     
                     , ExceptionLang.Data
                     , ExceptionLang.Evaluator
                     , ExceptionLang.Parser
                     
                     , ImplicitRefsCont.Data
                     , ImplicitRefsCont.Evaluator
                     , ImplicitRefsCont.Parser
                     
  build-depends:       base 
                     , megaparsec
                     , containers
                     , transformers 
                     , mtl
  default-language:    Haskell2010

executable eopl-langs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , eopl-langs
                     , megaparsec
  default-language:    Haskell2010

test-suite eopl-langs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , eopl-langs
                     , HUnit
                     , megaparsec
                     , transformers 
                     , mtl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/li-zhirui/EOPL-Langs-in-Haskell
