name:                learning-eopl
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/li-zhirui/Learning-EOPL-in-Haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Li Zhirui
maintainer:          labman004@outlook.com
copyright:           2016 Li Zhirui
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lang.Data.Expression
                     , Lang.Data.Program
                     , Lang.Data.Environment
                     , Lang.Data.ExpressedValue
                     , Lang.Data.DenotedValue
                     , Lang.Evaluator
                     , Lang.Parser
  build-depends:       base 
                     , megaparsec
                     , containers
  default-language:    Haskell2010

executable learning-eopl-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , learning-eopl
                     , megaparsec
  default-language:    Haskell2010

test-suite learning-eopl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , learning-eopl
                     , HUnit
                     , megaparsec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/li-zhirui/Learning-EOPL-in-Haskell
